[package]
name = "soroban-dex"
version = "0.0.1"
edition = "2021"
publish = false
autobins = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = {version="20.0.0-rc2"}

[dev_dependencies]
soroban-sdk = { version = "20.0.0-rc2", features = ["testutils"] }
rand = { version = "0.8.5" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
