[package]
name = "asset-manager"
version = "0.0.1"
edition = "2021"
publish = false
autobins = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = {version="21.6.0"}

[dev_dependencies]
soroban-sdk = { version = "21.6.0", features = ["testutils"] }
rand = { version = "0.8.5" }
ed25519-dalek = { version = "2.0.0"}
hex = "0.4.3"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
