[package]
name = "order-book"
version = "0.0.1"
edition = "2021"
publish = false
autobins = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "22.0.0-rc.3.2" }

[dev-dependencies]
soroban-sdk = {  version = "22.0.0-rc.3.2" , features = ["testutils"] }
rand = { version = "0.8.5" }
ed25519-dalek = { version = "2.0.0"}
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
